# playground

./: .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt  run.py
.xet/: config.toml
playground/: __init__.py  app.py  birthday_paradox.py  dice_roll_simulator.py  factor_finder.py  multtable.py  numbers.py  pig_latin_decoder.py  pig_latin_encoder.py  playground.py
playground/bbospp/: dice_roll_simulator.py  numbers.py
playground/coding_challenges/: spotify.py  url_shortener.py
playground/ml/apis/: mnist_predictor.py
playground/ml/artifacts/: mnist_model.keras  mnist_model_test.keras
playground/ml/training/: mnist.py
playground/models/artifacts/: mnist_model.keras
playground/models/training/: mnist.py
playground/react_playground/: distribution_series.py  first_react_component.py  netflix.py  simpletodo.py  url_shortener.py
playground/static/: package-lock.json  package.json  webpack.config.js
playground/static/content/: 404.md  about.md
playground/static/css/: style.css
playground/static/datafiles/: netflix_cleaned_data.csv
playground/static/js/: utils.js
playground/static/scripts/: Gaussian.js  PlaygroundsFirstComponent.js  SimpleTodo.js  gaussIndex.js  index.js  netflixComponents.js  netflixIndex.js  simpletodoIndex.js  spotifyAuth.js  spotifyIndex.js  spotifyTastes.js  urlIndex.js  urlShortener.js
playground/templates/: base.html  base.html.jinja  birthday.html  birthday.html.jinja  footer.html.jinja  header.html.jinja  home.html.jinja  nav.html.jinja
playground/templates/bbospp/: birthday.html.jinja  (+6 more)
(+13 files in other folders)
